--- a/arduino/Makefile
+++ b/arduino/Makefile
@@ -74,6 +74,7 @@ CURRENT_DIR       = $(shell basename $(CURDIR))
 OBJDIR            = $(PROJECT_DIR)/bin/$(BOARD_TAG)/$(CURRENT_DIR)
 
 ARDUINO_LIBS += ArduinoThread
+ARDUINO_LIBS += SoftwareSerial
 
 ### Do not touch - the path to Arduino.mk, inside the ARDMK_DIR
 include $(ARDMK_DIR)/Arduino.mk
